WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257025
[WGSL] Global variables don't need to be mangled
https://bugs.webkit.org/show_bug.cgi?id=257025
Summary
[WGSL] Global variables don't need to be mangled
Tadeu Zagallo
Reported
2023-05-19 06:43:29 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-19 06:43:44 PDT
<
rdar://problem/109564753
>
Tadeu Zagallo
Comment 2
2023-05-19 06:44:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14075
EWS
Comment 3
2023-05-22 00:08:58 PDT
Committed
264313@main
(4d5fe1667498): <
https://commits.webkit.org/264313@main
> Reviewed commits have been landed. Closing PR #14075 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug