[WGSL] Global variables don't need to be mangled https://bugs.webkit.org/show_bug.cgi?id=257025 rdar://109564753

Reviewed by Myles C. Maxfield.

The final program does not contain any global variables,
so we don't need to mangle them

* Source/WebGPU/WGSL/MangleNames.cpp:
(WGSL::MangledName::toString const):
(WGSL::NameManglerVisitor::visitFunctionBody):
(WGSL::NameManglerVisitor::visit):

Canonical link: https://commits.webkit.org/264313@main